<resources>
    <string name="app_name">PildFarma</string>
    <string name="app_login">Entrar</string>
    <string name="app_register">Crear cuenta</string>
    <string name="app_name_mayus">PILDFARMA</string>
    <string name="correo">Correo Electronico</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="no_cerrar_sesion">No cerrar sesión</string>
    <string name="conectarse_con">O conectate con</string>
    <string name="google">Google</string>
    <string name="registro_nombre">Nombre</string>
    <string name="registro_apellidos">Apellidos</string>
    <string name="registro_correo_electronico">Correo electrónico</string>
    <string name="registro_contrasena">Contraseña</string>
    <string name="registro_repetir_contraseña">Repetir contraseña</string>
    <string name="registro_fecha_nacimiento">Fecha de nacimiento</string>
    <string name="login_recuperar_contrasena">Recuperar contraseña</string>
    <string name="mensaje_recuperar_contrasena">No te preocupes, esto pasa mas veces de lo que te imaginas</string>
    <string name="mensaje2_recuperar_constrasena">Escribe tu correo electronico, por favor:</string>
    <string name="base_inicio">Alarmas</string>
    <string name="base_historial">Historial</string>
    <string name="base_perfil">Perfil</string>
    <string name="base_ajustes">Ajustes</string>
    <string name="title_activity_app_base">app_base</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>