<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register"
    android:background="@drawable/login">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="@color/azul"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/editText_register_nombre" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_register"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_register_nombre"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

    <EditText
        android:id="@+id/editText_register_correo"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/registro_correo_electronico"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/editText_register_nombre"
        app:layout_constraintStart_toStartOf="@+id/editText_register_nombre"
        app:layout_constraintTop_toBottomOf="@+id/editText_register_nombre"
        android:drawableStart="@drawable/ic_email"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawablePadding="12dp"/>

    <EditText
        android:id="@+id/editText_register_contrasena"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editText_register_correo"
        app:layout_constraintStart_toStartOf="@+id/editText_register_correo"
        app:layout_constraintTop_toBottomOf="@+id/editText_register_correo"
        android:hint="@string/registro_contrasena"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/darker_gray"
        android:drawableStart="@drawable/ic_lock"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawablePadding="12dp"/>

    <EditText
        android:id="@+id/editText_register_confirmar_contrasena"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editText_register_contrasena"
        app:layout_constraintStart_toStartOf="@+id/editText_register_contrasena"
        app:layout_constraintTop_toBottomOf="@+id/editText_register_contrasena"
        android:hint="@string/registro_repetir_contraseña"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/darker_gray"
        android:drawableStart="@drawable/ic_lock"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawablePadding="12dp"/>

    <TextView
        android:id="@+id/bttntext_iniciar_sesion_acregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/azul"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editText_register_nombre"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <EditText
        android:id="@+id/editText_register_nombre"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="368dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_person_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/registro_nombre"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bttn_crear_cuenta_acregister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/borde_redondo_boton_login"
        android:text="@string/app_register"
        app:layout_constraintEnd_toEndOf="@+id/editText_register_confirmar_contrasena"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_register_confirmar_contrasena"
        app:layout_constraintTop_toBottomOf="@+id/editText_register_confirmar_contrasena" />

</androidx.constraintlayout.widget.ConstraintLayout>