<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/home">

    <View
        android:id="@+id/view"
        android:layout_width="262dp"
        android:layout_height="305dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bttn_crear_cuenta_acmain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:contentDescription="@string/app_login"
        android:src="@drawable/logo_principal"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.773" />

    <Button
        android:id="@+id/bttn_crear_cuenta_acmain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="125dp"
        android:background="@drawable/borde_redondo_boton"
        android:text="@string/app_register"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="sans-serif-medium"/>

    <Button
        android:id="@+id/bttn_entrar_acmain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:background="@drawable/borde_redondo_boton2"
        android:text="@string/app_login"
        android:textColor="#005EB0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/bttn_crear_cuenta_acmain"
        app:layout_constraintStart_toStartOf="@+id/bttn_crear_cuenta_acmain"
        app:layout_constraintTop_toBottomOf="@+id/bttn_crear_cuenta_acmain"
        android:fontFamily="sans-serif-medium"/>


</androidx.constraintlayout.widget.ConstraintLayout>